--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -442,6 +442,19 @@ p {
 .top-0 {
   top: 0px;
 }
+.col-span-1 {
+  grid-column: span 1 / span 1;
+}
+.col-span-2 {
+  grid-column: span 2 / span 2;
+}
+.row-span-2 {
+  grid-row: span 2 / span 2;
+}
+.mx-10 {
+  margin-left: 2.5rem;
+  margin-right: 2.5rem;
+}
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -449,14 +462,17 @@ p {
 .-ml-\[20\%\] {
   margin-left: -20%;
 }
-.ml-4 {
-  margin-left: 1rem;
-}
 .-mr-\[20\%\] {
   margin-right: -20%;
 }
-.mr-\[20\%\] {
-  margin-right: 20%;
+.mb-14 {
+  margin-bottom: 3.5rem;
+}
+.ml-4 {
+  margin-left: 1rem;
+}
+.mt-14 {
+  margin-top: 3.5rem;
 }
 .flex {
   display: flex;
@@ -464,14 +480,20 @@ p {
 .grid {
   display: grid;
 }
-.min-h-60 {
-  min-height: 60vh;
+.aspect-landscape {
+  aspect-ratio: 3 / 2;
 }
-.min-h-80 {
-  min-height: 80vh;
+.aspect-square {
+  aspect-ratio: 1 / 1;
 }
 .min-h-90 {
   min-height: 90vh;
+}
+.w-\[60\%\] {
+  width: 60%;
+}
+.w-full {
+  width: 100%;
 }
 .max-w-screen-xl {
   max-width: 1280px;
@@ -479,36 +501,29 @@ p {
 .max-w-sm {
   max-width: 24rem;
 }
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
 .items-center {
   align-items: center;
 }
 .justify-end {
   justify-content: flex-end;
 }
+.justify-center {
+  justify-content: center;
+}
 .justify-between {
   justify-content: space-between;
 }
-.border-b-2 {
-  border-bottom-width: 2px;
+.gap-3 {
+  gap: 0.75rem;
 }
-.border-r-pink {
-  --tw-border-opacity: 1;
-  border-right-color: rgb(255 73 219 / var(--tw-border-opacity));
+.border-2 {
+  border-width: 2px;
 }
-.bg-pink {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 73 219 / var(--tw-bg-opacity));
-}
-.bg-\[\] {
-  background-color: ;
-}
-.bg-\[\#f3f3f3\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 243 243 / var(--tw-bg-opacity));
-}
-.bg-\[\#bdbfc3\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(189 191 195 / var(--tw-bg-opacity));
+.border-b-0 {
+  border-bottom-width: 0px;
 }
 .bg-\[\#d8d9db\] {
   --tw-bg-opacity: 1;
@@ -533,10 +548,6 @@ p {
   padding-left: 5%;
   padding-right: 5%;
 }
-.py-8 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
 .px-8 {
   padding-left: 2rem;
   padding-right: 2rem;
@@ -544,6 +555,10 @@ p {
 .py-15p {
   padding-top: 15%;
   padding-bottom: 15%;
+}
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 .text-center {
   text-align: center;
@@ -570,10 +585,6 @@ p {
   font-size: 1rem;
   line-height: 1.2;
 }
-.text-xs {
-  font-size: 0.75rem;
-  line-height: 1.2;
-}
 .font-bold {
   font-weight: 700;
 }
@@ -582,11 +593,6 @@ p {
 }
 .tracking-wide {
   letter-spacing: 0.025em;
-}
-.shadow-sm {
-  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
-  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .shadow-2xl {
   --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
@@ -612,10 +618,6 @@ p {
   }
   .md\:text-left {
     text-align: left;
-  }
-  .md\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 1.2;
   }
   .md\:text-5xl {
     font-size: 3rem;
