--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -1,10 +1,10 @@
 <footer class="p-5p flex justify-between">
 
-    <div class="grid grid-cols-3">
+    <div class="md:grid md:grid-cols-3 gap-7 text-center md:text-left">
 
-        <div class="col-span-2">
+        <div class="col-span-2 mb-9">
             <h3> Let's connect </h3>
-            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur alias omnis veniam nihil quos aspernatur delectus illo non, iste provident doloremque, repellendus possimus. Laborum consectetur enim delectus accusamus error alias.</p>
+            <p> Experience the pinnacle of opulence in our exquisite villa. Indulge in the ultimate luxury retreat in Bali. Get in touch with us today to book your unforgettable stay. </p>
         </div>
 
         <div class="col-span-1">
