--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -1,13 +1,13 @@
 
-<header class="md:absolute top-0 left-0 right-0 md:flex justify-between px-5p py-8">
+<header class="sm:absolute top-0 left-0 right-0 sm:flex justify-between px-5p py-8 text-center sm:text-left">
 
-    <h2 class="text-2xl ">
+    <h2 class="text-2xl">
         <a href="/index"> The Bali Villa </a>
     </h2>
 
     <nav class="tracking-wide">
         <a href="/rooms"> Rooms </a>
-        <a href="/book" class="ml-4 font-bold"> Book Now </a>
+        <a href="/contact" class="ml-4 font-bold"> Book Now </a>
     </nav>
 
 </header>
@@ -18,7 +18,7 @@
     <div class="{{page.background-position}} bg-cover max-w-screen-3xl mx-auto px-5p"
     style="background-image: url('{{page.banner-image}}')">
 
-        <div class="flex items-center min-h-90 justify-end">
+        <div class="flex items-center min-h-60 sm:min-h-90 justify-end">
 
             <div>
                 {% if page.pre-heading %}
