--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@
 
 @layer base {
 
+    html {
+        @apply border-8 sm:border-blue md:border-purple lg:border-pink;
+    }
+
     h1, h2, h3, h4  {
         @apply font-serif mb-[0.5em];
     }
@@ -45,7 +49,9 @@
     }
 
     .button  {
-        @apply inline-block px-4 py-2 uppercase tracking-wide bg-zinc-800 text-white ;
+        @apply inline-block px-4 py-2 uppercase tracking-wide border;
     }
-    
+
 }
+
+input::placeholder, textarea::placeholder 
