--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -22,10 +22,10 @@
 
             <div>
                 {% if page.pre-heading %}
-                <h2 class="text-base uppercase tracking-wide font-sans"> {{page.pre-heading}} </h2>
+                <h2 class="text-base uppercase tracking-wide font-sans text-center sm:text-right"> {{page.pre-heading}} </h2>
                 {% endif %}
 
-                <h1 class="text-6xl"> {{page.heading}} </h1>
+                <h1 class="text-6xl text-center sm:text-right"> {{page.heading}} </h1>
     
             </div>
         </div>
