--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,9 +27,9 @@
 <meta name="og:site_name" content="{{ site.data.site-settings.seo.site_name }}">
 <link rel="icon" type="image/png" href="{{ site.data.site-settings.seo.favicon_image }}">
 
-<!-- Iconoir for Icons  -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/iconoir-icons/iconoir@main/css/iconoir.css">
-
+<!-- This is our fontawesome icons  -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  
 <!------------ External Stylesheets  ------------>
 <link rel="stylesheet" type="text/css" href="/assets/css/output-style.css">
 
