--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -8,7 +8,7 @@
         </div>
 
         <div class="col-span-1">
-            <p> Call: <a href="tel:#"> 08123 45678 </a> </p> 
+            <p> <i class="fa-solid fa-phone"></i> <a href="tel:#"> 08123 45678 </a> </p> 
             <p> Email: <a href="mailto:#">hello@thebalivilla.com </a> </p>  
             <p> Instagram: <a href="https://www.instagram.com/">@thebalivilla</a> </p>     
         </div>
