--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -467,6 +467,9 @@ p {
 .absolute {
   position: absolute;
 }
+.relative {
+  position: relative;
+}
 .left-0 {
   left: 0px;
 }
@@ -510,9 +513,6 @@ p {
 .mb-14 {
   margin-bottom: 3.5rem;
 }
-.mb-2 {
-  margin-bottom: 0.5rem;
-}
 .mb-4 {
   margin-bottom: 1rem;
 }
@@ -551,6 +551,9 @@ p {
 }
 .hidden {
   display: none;
+}
+.h-full {
+  height: 100%;
 }
 .min-h-50 {
   min-height: 50vh;
@@ -625,6 +628,14 @@ p {
 .bg-center {
   background-position: center;
 }
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.object-top {
+  -o-object-position: top;
+     object-position: top;
+}
 .p-5p {
   padding: 5%;
 }
@@ -664,14 +675,11 @@ p {
 .pl-\[1\%\] {
   padding-left: 1%;
 }
-.pl-\[2\%\] {
-  padding-left: 2%;
+.pl-\[5\%\] {
+  padding-left: 5%;
 }
 .pt-15p {
   padding-top: 15%;
-}
-.pl-\[5\%\] {
-  padding-left: 5%;
 }
 .text-center {
   text-align: center;
