--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -1,6 +1,6 @@
 <footer class="p-5p flex justify-between">
 
-    <div class="md:grid md:grid-cols-3 gap-7 text-center md:text-left">
+    <div class="md:grid md:grid-cols-3 gap-9 text-center md:text-left">
 
         <div class="col-span-2 mb-9">
             <h3> Let's connect </h3>
@@ -8,9 +8,18 @@
         </div>
 
         <div class="col-span-1">
-            <p> <i class="fa-solid fa-phone"></i> <a href="tel:#"> 08123 45678 </a> </p> 
-            <p> Email: <a href="mailto:#">hello@thebalivilla.com </a> </p>  
-            <p> Instagram: <a href="https://www.instagram.com/">@thebalivilla</a> </p>     
+            <p class="inline-flex center"> 
+                <i class="fa-solid fa-phone"></i> 
+                <a href="tel:#"> 08123 45678 </a> 
+            </p> <br>
+            <p class="inline-flex center"> 
+                <i class="fa-solid fa-envelope"></i>
+                <a href="mailto:#">hello@thebalivilla.com </a> 
+            </p>  <br>
+            <p class="inline-flex center">
+                <i class="fa-brands fa-instagram"></i>
+                <a href="https://www.instagram.com/">@thebalivilla</a>
+            </p>     
         </div>
 
     </div>
