--- a/style.css
+++ b/style.css
@@ -66,9 +66,11 @@ input::-moz-placeholder, textarea::-moz-placeholder {
 
   /*  Font Awesome Icons --------------------  */
 
-.fa-solid {
-    display: block;
+.fa-solid,
+.fa-brands {
+    display: inline-block;
     text-align: center;
-    margin-bottom: 2rem;
-    font-size: 3rem;
+    margin-bottom: 1rem;
+    font-size: 1.5rem;
+    padding-right: 1rem;
 }
