--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -681,14 +681,14 @@ p {
 .pl-\[1\%\] {
   padding-left: 1%;
 }
+.pl-\[2\%\] {
+  padding-left: 2%;
+}
 .pl-\[5\%\] {
   padding-left: 5%;
 }
 .pt-15p {
   padding-top: 15%;
-}
-.pl-\[2\%\] {
-  padding-left: 2%;
 }
 .text-center {
   text-align: center;
@@ -811,9 +811,6 @@ input::-moz-placeholder, textarea::-moz-placeholder {
   .sm\:min-h-90 {
     min-height: 90vh;
   }
-  .sm\:min-h-50 {
-    min-height: 50vh;
-  }
   .sm\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -822,6 +819,9 @@ input::-moz-placeholder, textarea::-moz-placeholder {
   }
   .sm\:content-center {
     align-content: center;
+  }
+  .sm\:gap-3 {
+    gap: 0.75rem;
   }
   .sm\:bg-\[\#d8d9db\] {
     --tw-bg-opacity: 1;
