--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -25,3 +25,7 @@
     </div>
 
 </footer>
+
+<div class="text-center px-5p sm:px-0">
+    <p class="subtle"> © 2023 All rights reserved. <br> Designed and Built by Refined Island Creations. </p>
+</div>
