--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -1,5 +1,5 @@
 
-<header class="sm:absolute top-0 left-0 right-0 sm:flex justify-between px-5p py-8 text-center sm:text-left">
+<header class="sm:absolute top-0 left-0 right-0 sm:flex justify-between items-center px-5p py-8 text-center sm:text-left">
 
     <h2 class="text-2xl">
         <a href="/index"> The Bali Villa </a>
@@ -18,14 +18,14 @@
     <div class="{{page.background-position}} bg-cover max-w-screen-3xl mx-auto px-5p"
     style="background-image: url('{{page.banner-image}}')">
 
-        <div class="flex items-center min-h-60 sm:min-h-90 justify-end">
+        <div class="flex items-center min-h-80 sm:min-h-90 justify-end">
 
             <div>
                 {% if page.pre-heading %}
                 <h2 class="text-base uppercase tracking-wide font-sans text-center sm:text-right"> {{page.pre-heading}} </h2>
                 {% endif %}
 
-                <h1 class="text-6xl text-center sm:text-right"> {{page.heading}} </h1>
+                <h1 class="text-6xl text-center center sm:text-right"> {{page.heading}} </h1>
     
             </div>
         </div>
