--- a/style.css
+++ b/style.css
@@ -76,3 +76,12 @@ input::-moz-placeholder, textarea::-moz-placeholder {
     font-size: 1.5rem;
     padding-right: 1rem;
 }
+
+.center {
+    text-align: center !important;
+}
+
+.subtle {
+    opacity: .5;
+    font-size: 0.8rem;
+}
