--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -20,12 +20,12 @@
 
         <div class="flex items-center min-h-80 sm:min-h-90 justify-end">
 
-            <div>
+            <div class="text-center sm:text-right">
                 {% if page.pre-heading %}
-                <h2 class="text-base uppercase tracking-wide font-sans text-center sm:text-right"> {{page.pre-heading}} </h2>
+                <h2 class="text-base uppercase tracking-wide font-sans"> {{page.pre-heading}} </h2>
                 {% endif %}
 
-                <h1 class="text-6xl text-center center sm:text-right"> {{page.heading}} </h1>
+                <h1 class="text-6xl"> {{page.heading}} </h1>
     
             </div>
         </div>
