--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -614,17 +614,14 @@ p {
 .bg-\[position\:23\%_50\%\] {
   background-position: 23% 50%;
 }
+.bg-\[position\:25\%_50\%\] {
+  background-position: 25% 50%;
+}
 .bg-\[position\:36\%_50\%\] {
   background-position: 36% 50%;
 }
-.bg-\[position\:73\%_50\%\] {
-  background-position: 73% 50%;
-}
 .bg-center {
   background-position: center;
-}
-.bg-\[position\:25\%_50\%\] {
-  background-position: 25% 50%;
 }
 .object-cover {
   -o-object-fit: cover;
@@ -743,6 +740,10 @@ p {
 
 /* ----------- ADDITIONAL COMPONENTS  --------- */
 
+html {
+    scroll-behavior: smooth;
+  }
+
 input::-moz-placeholder, textarea::-moz-placeholder {
     opacity: 1; 
     color: black; 
@@ -834,9 +835,6 @@ input::-moz-placeholder, textarea::-moz-placeholder {
   }
   .sm\:bg-\[position\:50\%_50\%\] {
     background-position: 50% 50%;
-  }
-  .sm\:bg-\[position\:25\%_50\%\] {
-    background-position: 25% 50%;
   }
   .sm\:p-5p {
     padding: 5%;
