--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -1,7 +1,7 @@
 
 <header class="sm:absolute top-0 left-0 right-0 sm:flex justify-between items-center px-5p py-8 text-center sm:text-left">
 
-    <h2 class="text-2xl">
+    <h2 class="text-2xl sm:mb-0">
         <a href="/index"> The Bali Villa </a>
     </h2>
 
@@ -18,7 +18,7 @@
     <div class="{{page.background-position}} bg-cover max-w-screen-3xl mx-auto px-5p"
     style="background-image: url('{{page.banner-image}}')">
 
-        <div class="flex items-center min-h-80 sm:min-h-90 justify-end">
+        <div class="flex items-center min-h-80 sm:min-h-90 justify-center sm:justify-end">
 
             <div class="text-center sm:text-right">
                 {% if page.pre-heading %}
@@ -28,6 +28,7 @@
                 <h1 class="text-6xl"> {{page.heading}} </h1>
     
             </div>
+
         </div>
 
     </div>
