--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ input::-moz-placeholder, textarea::-moz-placeholder {
     z-index: 50;
   }
  
-  .social-btn {
+.social-btn {
     display: flex;
     width: 300px;
     align-items: center;
@@ -135,13 +135,24 @@ input::-moz-placeholder, textarea::-moz-placeholder {
     border-top-right-radius: 30px;
     margin-bottom: -6.9px;
     position: relative;
-    left: -227.8px;
+    left: -241.8px;
     transition: left 1s;
   }
-  .social-btn:hover {
-    left: -73.4px;
-    transition: left 1s;
+
+
+@media (min-width:300px) {
+    .responsive-header {
+        font-size: 4.5rem;
+    }
+}
+
+@media (min-width: 640px) {
+    .social-btn:hover {
+        left: -73.4px;
+        transition: left 1s;
+      }
   }
+  
 
 
   @media screen and (min-width: 1600px) {
@@ -150,4 +161,3 @@ input::-moz-placeholder, textarea::-moz-placeholder {
     }
   }
 
-  
