--- a/_includes/social-hub.html
+++ b/_includes/social-hub.html
@@ -1,10 +1,10 @@
 <div class="social">
-	<a href="#">
+	<a href="https://www.instagram.com/">
 		<div class="social-btn">
 			<img src="/images/instagram.svg">
 		</div>
 	</a>
-	<a href="#">
+	<a href="https://web.whatsapp.com/">
 		<div class="social-btn">
 			<img src="/images/whatsapp.svg">
 		</div>
