--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -27,5 +27,5 @@
 </footer>
 
 <div class="text-center px-5p sm:px-0">
-    <p class="subtle"> © 2023 All rights reserved. <br> Designed and Built by Refined Island Creations. </p>
+    <p class="subtle"> © 2023 All rights reserved. <br> Designed and built by Refined Island Creations. </p>
 </div>
