--- a/_includes/social-hub.html
+++ b/_includes/social-hub.html
@@ -1,10 +1,10 @@
 <div class="social">
-	<a href="https://www.instagram.com/refinedislandcreations/">
+	<a href="https://www.instagram.com/refinedislandcreations/" target="_blank">
 		<div class="social-btn">
 			<img src="/images/instagram.svg">
 		</div>
 	</a>
-	<a href="https://wa.me/6282339577507">
+	<a href="https://wa.me/6282339577507" target="_blank">
 		<div class="social-btn">
 			<img src="/images/whatsapp.svg">
 		</div>
