--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -10,11 +10,11 @@
         <div class="col-span-1">
             <p class="inline-flex center"> 
                 <i class="fa-solid fa-phone"></i> 
-                <a href="tel:#"> 08123 45678 </a> 
+                <a href="tel:006282339577507"> 0823 3957 7507 </a> 
             </p> <br>
             <p class="inline-flex center"> 
                 <i class="fa-solid fa-envelope"></i>
-                <a href="mailto:#">hello@thebalivilla.com </a> 
+                <a href="mailto:info@refinedislandcreations.com">hello@thebalivilla.com </a> 
             </p>     
         </div>
 
